test/negative/StaticFinalMethod.java
public class StaticFinalMethod {
    public StaticFinalMethod() {}
    static final void f() {
    }
}
